<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_itemListGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <ImageView
            android:id="@+id/img_itemListGithub"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/item_contentDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_itemListGithub_userName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/item_username"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_itemListGithub"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_itemListGithub_htmlUrl"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/item_htmlUrl"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@id/guideline_itemListGithub"
            app:layout_constraintTop_toBottomOf="@id/tv_itemListGithub_userName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>